--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Create Notes, Keep it Remote and Share with others! Made with Vue & Firebase">
+    <script data-ad-client="ca-pub-1496467342208736" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
     <link href="https://fonts.googleapis.com/css?family=Lora|Roboto+Slab&display=swap" rel="stylesheet">
     <style>
